# rva

./: #dotfile_config_system.org#  #style.css#  .#index.html  .gitignore  CMakeLists.txt  Cargo.toml  README.org  control.py  dotfile_config_system.html  dotfile_config_system.org  git-pull  git-push  index.html  info.txt  marcadores.html  package-lock.json  package.json  style.css  system-config.org  system.js
Aplication/: package-lock.json  package.json
Aplication/src/: index..html  main.js  preload.js  renderer.js  style.css
TEMP/: hello.java
dotFile/: #dotfile_config_system.org#  .#dotfile_config_system.org  apt.bash  dotfile_config_system.org  emacs-install.bash  emacs-linux.org  upgrade.bash
dotfile/: apt.bash  emacs-init.org
etc/tmux.conf/: источник.txt
home/: home-index.html  Полезные сайты.org
home/Academia/: examples1.html  examples2.html  examples3.html
home/Academy/: index-Academy.html
home/Blog/: gulpfile.js  package-lock.json  package.json
home/Journal/: journal-index.html
home/Notes/: 20240320T124528--examples__emacs.org  20240320T124629--alisa__philosophy.org  20240323T113200--git__new.org
home/Projects/: projects.html
home/Документы/: .~lock.Макет дизайн-документа - Kris Teylor.doc#  Копия Проектное предложение.docx  Макет дизайн-документа - Kris Teylor.doc
home/Шаблоны/: org_header.org  Дизайн-документ.org
ide/: index.html  main.js  package-lock.json  package.json  preload.js  styles.css
notes/: examle.md
src/: env.rs  index..html  main.js
Дизайн-документ/: Дизайн-документ.html  Дизайн-документ.org
(+28 files in other folders)
