workspace = { members = ["home/Академия/2024/rust/hello_cargo"] }
[package]
name = "desolate_green_world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13" # make sure this is the latest version
